--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@astrojs/svelte": "^1.0.0",
+    "@astrojs/vercel": "^1.0.0",
     "astro": "^1.0.0",
     "svelte": "^3.46.4"
   }
